--- a/examples/tables/client/menu.jade
+++ b/examples/tables/client/menu.jade
@@ -2,6 +2,7 @@ doctype html
 html(lang="en")
   head
     title index
+    link(rel='stylesheet', href='dialog-promise-local.css')
     link(rel='stylesheet', href='dialog-promise.css')
     link(rel='stylesheet', href='my-things.css')
     link(rel='stylesheet', href='my-tables.css')
