--- a/examples/tables/client/dialog-promise.css
+++ b/examples/tables/client/dialog-promise.css
@@ -1,6 +1,6 @@
 .dialog-promise{
-    background-color: #fff;
-    text-align: center;
+    background-color: rgba(176,194,229,0.9); /* Black w/ opacity */  
+	text-align: center;
     margin: 0px;
     padding: 0px;
     display: none;
@@ -31,6 +31,9 @@
 
 .dialog-promise>div:nth-child(2){
     margin-top: 20px; 
+	font-family: arial;
+	transform: uppercase;
+	color: #fff;
 }
 
 .dialog-promise button{
@@ -62,19 +65,20 @@
     height: 100%; /* Full height */
     overflow: auto; /* Enable scroll if needed */
     background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    background-color: rgba(0,0,0,0.0); /* Black w/ opacity */
     padding-top: 60px;
 }
 
 .dialog-promise .dialog-promise-close-button{
     margin:0px;
     float:right;
-    background-color:blue;
-    width:24px;
-    height:16px;
+    background-color: #2e4f96;
+    width:25px;
+    height:25px;
     color:white;
     font-weight:bold;
     font-size:60%;
+	border: 0px;
 }
 
 .dialog-promise-close-button:before{
@@ -101,7 +105,7 @@
 }
 
 .dialog-menu-option:hover{
-    background-color:#DDF;
+    background-color:#2c89df;
     opacity: 0.9;
 	
 }
@@ -119,5 +123,5 @@
 }
 
 .imagenes{
-	height: 40px
+	height: 100px
 }
