--- a/examples/tables/client/dialog-promise-local.styl
+++ b/examples/tables/client/dialog-promise-local.styl
@@ -1,126 +1,148 @@
 .dialog-promise
-    background-color rgba(176,194,229,0.9) /* Black w/ opacity */  
-	text-align center
-    margin 0px
-    padding 0px
-    display none
-    z-index 1
-    width auto
-    max-width 90%
-    height auto
-    max-height 90%
-    overflow auto
-    position fixed
-    top 5%
-    left 5%
-    -webkit-animation animatezoom 0.3s
-    animation animatezoom 0.3s
+  background-color rgba(176,194,229,0.9)
+  text-align center
+  margin 0px
+  padding 0px
+  display none
+  z-index 1
+  width auto
+  max-width 90%
+  height auto
+  max-height 90%
+  overflow auto
+  position fixed
+  top 5%
+  left 5%
+  -webkit-animation animatezoom 0.3s
+  animation animatezoom 0.3s
 
 
 .dialog-promise[docked=under]
-    transform-origin top left
+  transform-origin top left
 
 
 .dialog-promise[docked=under-right]
-    transform-origin top right
+  transform-origin top right
 
 
-.dialog-promise>*
-    margin 10px 10px 5px 10px 
+.dialog-promise *
+  margin 10px 10px 5px 10px 
+    
 
-
-.dialog-promise>div nth-child(2)
-    margin-top 20px 
-	font-family arial
-	transform uppercase
-	color #fff
-
-
+.dialog-promise div:nth-child(2)
+  color #0f306e
+  text-transform uppercase
+  font-family helvetica
+  font-size 75%
+  letter-spacing 1px
+  text-align left
+  font-weight 700
+	
 .dialog-promise button
-    margin 10px
-
-
+  margin 10px
+  color #FFF
+  background-color #2f5097
+  border-right  2px solid #122348
+  border-bottom 2px solid #122348
+  border-left  2px solid #2f5097
+  border-top 2px solid #2f5097
+ 
+ .dialog-promise button:hover
+  color #FFF
+  background-color #0188cc
+  border-right  2px solid #036495
+  border-bottom 2px solid #036495
+  border-left  2px solid #0188cc
+  border-top 2px solid #0188cc
+  
+.dialog-promise button:active
+  color #FFF
+  background-color #082158
+  border-right  2px solid #2f5097
+  border-bottom 2px solid #2f5097
+  border-left  2px solid #122348
+  border-top 2px solid #122348
+  
 @-webkit-keyframes animatezoom 
-    from -webkit-transform scale(0.25)
-    to -webkit-transform scale(1)
+  from -webkit-transform scale(0.25)
+  to -webkit-transform scale(1)
 
 
 @keyframes animatezoom 
-    from transform scale(0.25)
-    to transform scale(1)
+  from transform scale(0.25)
+  to transform scale(1)
 
 
 @keyframes animatezoom 
-    from transform scale(0.25)
-    to transform scale(1)
+  from transform scale(0.25)
+  to transform scale(1)
 
 
 .dialog-promise-background 
-    display none /* Hidden by default */
-    position fixed /* Stay in place */
-    z-index 1 /* Sit on top */
-    left 0
-    top 0
-    width 100% /* Full width */
-    height 100% /* Full height */
-    overflow auto /* Enable scroll if needed */
-    background-color rgb(0,0,0) /* Fallback color */
-    background-color rgba(0,0,0,0.0) /* Black w/ opacity */
-    padding-top 60px
+  display none
+  position fixed 
+  z-index 1 
+  left 0
+  top 0
+  width 100%
+  height 100%
+  overflow auto
+  background-color rgb(0,0,0)
+  background-color rgba(0,0,0,0.0)
+  padding-top 60px
 
 
 .dialog-promise .dialog-promise-close-button
-    margin 0px
-    float right
-    background-color #2e4f96
-    width 25px
-    height 25px
-    color white
-    font-weight bold
-    font-size 60%
-	border 0px
+  margin 0px
+  float right
+  background-color #2e4f96
+  width 25px
+  height 25px
+  color white
+  font-weight bold
+  font-size 60%
+  border 0px
+  content "X"	
 
-
-.dialog-promise-close-button before
-    content 'X'
-
+.dialog-promise-close-button:before
+  content 'X'
+  color white
 
 .dialog-menu label
-    margin-left 4px
-    vertical-align 20%
-    white-space nowrap
+  margin-left 4px
+  vertical-align 20%
+  white-space nowrap
 
 
 .dialog-menu td
-    text-align left
+  text-align left
 
 
 .dialog-menu-line
-    height 2px
-    background-color rgba(100,100,100,0.3)
+  height 2px
+  background-color rgba(100,100,100,0.3)
 
 
 .dialog-menu-non-option
-    background-color rgba(150,150,150,0.3)
+  background-color rgba(150,150,150,0.3)
 
-
-.dialog-menu-option hover
-    background-color #2c89df
-    opacity 0.9
+  
+.dialog-menu-option:hover
+  background-color #23a3e3
+  opacity 0.9
 	
 
-
 .dialog-0 *
-    padding 0px
-    margin 0px
-    border 0px
-    border-image-width 0px
-    vertical-align bottom
+  padding 0px
+  margin 0px
+  border 0px
+  border-image-width 0px
+  vertical-align bottom
 
 
 .dialog-0 table
-    border-collapse collapse
+  border-collapse collapse
 
 
 .imagenes
-	height 40px
+  height 40px
