--- a/examples/tables/client/dialog-promise-local.styl
+++ b/examples/tables/client/dialog-promise-local.styl
@@ -54,6 +54,7 @@
   border-bottom 2px solid #036495
   border-left  2px solid #0188cc
   border-top 2px solid #0188cc
+  cursor pointer
   
 .dialog-promise button:active
   color #FFF
@@ -126,12 +127,19 @@
 .dialog-menu-non-option
   background-color rgba(150,150,150,0.3)
 
-  
-.dialog-menu-option:hover
-  background-color #23a3e3
-  opacity 0.9
-	
+.dialog-menu-option  
+  -webkit-transform scale(1.0)
+  transform scale(1.0)
+  -webkit-transition .3s ease-in-out
+  transition .3s ease-in-out
 
+.dialog-menu-option:hover
+  -webkit-transition .3s ease-in-out
+  transition .3s ease-in-out
+  -webkit-transform scale(1.1)
+  transform scale(1.1)
+  cursor pointer
+  
 .dialog-0 *
   padding 0px
   margin 0px
