Cambios en chpass.jade y chpass.styl Agregamos los .styl del calendario

--- a/examples/tables/unlogged/chpass.styl
+++ b/examples/tables/unlogged/chpass.styl
@@ -1,2 +1,86 @@
 body
-  background-color black
+  background-color #D8DBE5
+  
+.chpasstable
+  background-color #F6F7FB
+  max-width 450px
+  min-width 400px
+  margin-left 30px
+  margin-top 30px
+  border 1px solid #B6BCCE
+  
+
+.formtd
+  width 90%
+  
+.iconostd
+  width 10% 
+  
+.formtitle
+  background-color #126da6
+  text-align center
+  padding 10px
+  
+h2
+  color white
+  font-family helvetica
+  text-transform uppercase
+  font-size 80%
+  font-weight 700
+  
+.chpassImg
+  padding 0px
+  width 210px
+  display block
+  margin-left auto
+  margin-right auto
+
+.iconoslog
+  width 37px
+  padding 5px
+  margin-top 5px
+  margin-left 20px
+  
+input[type="text"]
+  -webkit-autofill
+  background-color white
+  border 1px solid #c2cde2
+  -webkit-box-shadow 0 0 0px 1000px white inset
+  -webkit-text-fill-color #273966
+  background-color #fff
+  padding 10px
+  width 80%   
+
+input[type=password]
+  -webkit-autofill
+  background-color white
+  border 1px solid #c2cde2
+  -webkit-box-shadow 0 0 0px 1000px white inset
+  -webkit-text-fill-color #778caa
+  background-color #fff
+  padding 10px
+  width 80%  
+
+  
+.submit
+  background-color #0088CC
+  color #FFF
+  font-weight 700
+  width 100%
+  padding 15px
+  margin-top 15px
+  margin-bottom 5px
+  border-bottom    1px solid #adb7d2
+  border-right   1px solid #adb7d2
+  
+.submit:hover
+  background-color #0ebeea
+  color #FFF
+  font-weight 700
+  width 100%
+  padding 15px
+  margin-top 15px
+  margin-bottom 5px
+  border-bottom    1px solid #adb7d2
+  border-right   1px solid #adb7d2
+  cursor pointer
