--- a/examples/tables/unlogged/login.styl
+++ b/examples/tables/unlogged/login.styl
@@ -83,3 +83,4 @@ input[type=password]
   margin-bottom 5px
   border-bottom    1px solid #adb7d2
   border-right   1px solid #adb7d2
+  cursor pointer
