--- a/examples/tables/client/menu.jade
+++ b/examples/tables/client/menu.jade
@@ -6,6 +6,10 @@ html(lang="en")
     link(rel='stylesheet', href='my-things.css')
     link(rel='stylesheet', href='my-tables.css')
     link(rel='stylesheet', href='menu.css')
+    link(rel='stylesheet', href='triangle.css')
+    link(rel='stylesheet', href='site.css')
+    link(rel='stylesheet', href='theme.css')
+    link(rel='stylesheet', href='pikaday.css')
     link(rel="shortcut icon", href="img/ptable.png", type:"image/png")
     link(rel="apple-touch-icon", href="img/ptable.png")
   body
