Cambie iconos en chpass.jade

--- a/examples/tables/client/chpass.jade
+++ b/examples/tables/client/chpass.jade
@@ -23,6 +23,7 @@ html
             input(id="newPassword", type="password", name="newPassword", placeholder=newPasswordLabel)
         tr
           td.iconostd
+            img.iconoslog(src='iconoreppass.png') 
           td.formtd    
             input(id="repPassword", type="password", name="repPassword", placeholder=repPasswordLabel)
         tr
