--- a/examples/tables/client/pikaday.styl
+++ b/examples/tables/client/pikaday.styl
@@ -11,7 +11,6 @@
   position relative
   margin 0
   padding 0px
-  font-size 12px
   line-height 20px
   font-weight bold
   background-color transparent
@@ -75,7 +74,6 @@
   border-right 1px solid #a1b4d9
   border-radius 5px
 
-  
 .pika-table td:hover
   padding 0px
   background-color #25a5e5
@@ -94,6 +92,9 @@
   background-color transparent
   border 0px
  
+.pika-title
+  font-size 130%
+
 .pika-select
   display inline-block
   padding 6px
